--- a/template-vita.tex
+++ b/template-vita.tex
@@ -1,16 +1,21 @@
 \begin{vita}
-\dateitem{February 31, 1969}{Born---Crazytown, OH}
-\dateitem{Mayuary, 2000}{B.S., Party College, Party Town, Party State}
+\dateitem{May, 2019}{B.S. Physics, B.A. Mathematics, Rowan University, Glassboro, NJ}
+\dateitem{August 2020 - July 2021}{Graduate Fellow, The Ohio State University, Columbus, OH}
+\dateitem{August 2021 - April 2023}{Graduate Teaching Associate, The Ohio State University, Columbus, OH}
+\dateitem{August, 2023}{M.S. Physics, The Ohio State University, Columbus, OH}
+\dateitem{August 2023 - July 2025}{Graduate Research Associate, The Ohio State University, Columbus, OH}
 % Insert other relevant items here (GTA, etc.)
 
 \begin{publist}
-\pubitem{Paper 1}
-\pubitem{Paper 2}
+\pubitem{Applying Machine Learning Methods to Laser Acceleration of Protons: Lessons Learned from Synthetic Data}
+\pubitem{Towards Automated Learning with Ultra-Intense Laser Systems Operating in the kHz Repetition Rate Regime}
+\pubitem{Intelligent Control of MeV Electrons and Protons}
+\pubitem{Can Two Pulses Enhance Proton and Electron Acceleration?  }
 \end{publist}
 
 \begin{fieldsstudy}
 \majorfield{Physics}
-\onestudy{small pendulums}{my advisor's name} % optional
+%\onestudy{Computational Plasma Physics}{my advisor's name} % optional
 % Alternatively you can do:
 % \begin{studieslist}
 % \studyitem{Topic 1}{Professor 1}
