Finished Much of Ch. 4 Background

--- a/chap2.tex
+++ b/chap2.tex
@@ -330,7 +330,7 @@ Alternatively, Passoni and Lontano\cite{Passoni_2004_LaPB} introduces an upper l
 
 Furthermore, some hybrid models include elements of both fluid and quasistatic models like Robinson\cite{Robinson_2006_PRL} and Albright\cite{Albright_2006_PRL}.
 
-\subsubsection{Optimization of TNSA process}
+\subsubsection{Optimization of TNSA process} \label{sec:tnsa_opt}
 
 Since the TNSA process is intimately related to the hot electron process at the front of the target and the flat density gradient at the back, many efforts have been taken to design targets that optimize ion acceleration. Patel\cite{Patel_2003_PRL} used spherically shaped targets to act as a lens that can focused the proton beam. MacKinnon\cite{Mackinnon_2002_PRL} showed lower target thickness leads to higher proton energy due to a higher mean density of hot electrons at the surface. More recent experiments have even used nanowires\cite{Vallieres_2021_Nature} and microtubes\cite{Strehlow_2022_Nature}. Many experiments generally find that there is an optimal level of pre-expansion of the target that enhances hot electron generation and ion acceleration (e.g. McKenna\cite{McKenna_2008_LaPB}).
 
