--- a/double.bib
+++ b/double.bib
@@ -68,3 +68,115 @@
 	doi = {10.1103/PhysRevLett.105.195008},
 	url = {https://link.aps.org/doi/10.1103/PhysRevLett.105.195008}
 }
+
+@article{Robinson_2007_PPCF,
+	doi = {10.1088/0741-3335/49/4/002},
+	url = {https://dx.doi.org/10.1088/0741-3335/49/4/002},
+	year = {2007},
+	month = {feb},
+	publisher = {},
+	volume = {49},
+	number = {4},
+	pages = {373},
+	author = {A P L Robinson and D Neely and P McKenna and R G Evans},
+	title = {Spectral control in proton acceleration with multiple laser pulses},
+	journal = {Plasma Physics and Controlled Fusion},
+	abstract = {We address the question of whether multiple high intensity (&gt;1018 W cm−2) laser pulses (each O(100 fs)) can produce proton beams with a modified energy spectrum on irradiating a foil target. This has been studied in one dimension with both Vlasov and particle-in-cell codes. A reduction in the maximum proton energy, and the generation of spectral peaks, is observed. This is the first theoretical demonstration of spectral peak generation by purely optical means. The mechanism, which has been termed multiple pulse sheath acceleration, that produces these spectral peaks is described, and the same mechanism occurs in both sets of simulations.}
+}
+
+@article{Fuchs_2007_PRL,
+	title = {Laser-Foil Acceleration of High-Energy Protons in Small-Scale Plasma Gradients},
+	author = {Fuchs, J. and Cecchetti, C. A. and Borghesi, M. and Grismayer, T. and d'Humi\`eres, E. and Antici, P. and Atzeni, S. and Mora, P. and Pipahl, A. and Romagnani, L. and Schiavi, A. and Sentoku, Y. and Toncian, T. and Audebert, P. and Willi, O.},
+	journal = {Phys. Rev. Lett.},
+	volume = {99},
+	issue = {1},
+	pages = {015002},
+	numpages = {4},
+	year = {2007},
+	month = {Jul},
+	publisher = {American Physical Society},
+	doi = {10.1103/PhysRevLett.99.015002},
+	url = {https://link.aps.org/doi/10.1103/PhysRevLett.99.015002}
+}
+
+@article{Scott_2012_APL,
+	author = {Scott, G. G. and Green, J. S. and Bagnoud, V. and Brabetz, C. and Brenner, C. M. and Carroll, D. C. and MacLellan, D. A. and Robinson, A. P. L. and Roth, M. and Spindloe, C. and Wagner, F. and Zielbauer, B. and McKenna, P. and Neely, D.},
+	title = {Multi-pulse enhanced laser ion acceleration using plasma half cavity targets},
+	journal = {Applied Physics Letters},
+	volume = {101},
+	number = {2},
+	pages = {024101},
+	year = {2012},
+	month = {07},
+	abstract = {We report on a plasma half cavity target design for laser driven ion acceleration that enhances the laser to proton energy conversion efficiency and has been found to modify the low energy region of the proton spectrum. The target design utilizes the high fraction of laser energy reflected from an ionized surface and refocuses it such that a double pulse interaction is attained. We report on numerical simulations and experimental results demonstrating that conversion efficiencies can be doubled, compared to planar foil interactions, when the secondary pulse is delivered within picoseconds of the primary pulse.},
+	issn = {0003-6951},
+	doi = {10.1063/1.4734397},
+	url = {https://doi.org/10.1063/1.4734397},
+	eprint = {https://pubs.aip.org/aip/apl/article-pdf/doi/10.1063/1.4734397/13167103/024101\_1\_online.pdf},
+}
+
+@article{Morace_2019_Nat_Comm,
+	author = {Morace, A. and Iwata, N. and Sentoku, Y.},
+	year = {2019},
+	month = {7},
+	pages = {2995},
+	title = {Enhancing Laser Beam Performance by Interfering Intense Laser Beamlets},
+	volume = {10},
+	journal = {Nat Commun},
+	doi = {10.1038/s41467-019-10997-1}
+}
+
+@article{Khan_2024_NJoP,
+	doi = {10.1088/1367-2630/ad7052},
+	url = {https://dx.doi.org/10.1088/1367-2630/ad7052},
+	year = {2024},
+	month = {aug},
+	publisher = {IOP Publishing},
+	volume = {26},
+	number = {8},
+	pages = {083026},
+	author = {Imran Khan and Vikrant Saxena},
+	title = {TNSA based proton acceleration by two oblique laser pulses in the presence of an axial magnetic field},
+	journal = {New Journal of Physics},
+	abstract = {We employ two-dimensional particle-in-cell simulations to examine, in detail, the effect of a kilo-Tesla magnetic field applied along the normal of a flat TNSA target on the cutoff energy of protons/ions. The two cases of (i) normally incident single laser pulse, and (ii) two obliquely incident laser pulses are thoroughly examined. It is shown that the two-oblique-pulse configuration combined with an external magnetic field results in a stronger enhancement (56 MeV–75 MeV) in the protons’ cutoff energies than the normally incident single laser pulse with an external magnetic field (19 MeV–24 MeV). This combination of two-oblique laser pulses along with a kilo-Tesla level external magnetic field is therefore found to be highly effective in accelerating protons/ions in the TNSA regime.}
+}
+
+@article{Arefiev_2016_NJoP,
+	doi = {10.1088/1367-2630/18/10/105011},
+	url = {https://dx.doi.org/10.1088/1367-2630/18/10/105011},
+	year = {2016},
+	month = {oct},
+	publisher = {IOP Publishing},
+	volume = {18},
+	number = {10},
+	pages = {105011},
+	author = {A Arefiev and T Toncian and G Fiksel},
+	title = {Enhanced proton acceleration in an applied longitudinal magnetic field},
+	journal = {New Journal of Physics},
+	abstract = {Using two-dimensional particle-in-cell simulations, we examine how an externally applied strong magnetic field impacts proton acceleration in laser-irradiated solid-density targets. We find that a kT-level external magnetic field can sufficiently inhibit transverse transport of hot electrons in a flat laser-irradiated target. While the electron heating by the laser remains mostly unaffected, the reduced electron transport during proton acceleration leads to an enhancement of maximum proton energies and the overall number of energetic protons. The resulting proton beam is much better collimated compared to a beam generated without applying a kT-level magnetic field. A factor of three enhancement of the laser energy conversion efficiency into multi-MeV protons is another effect of the magnetic field. The required kT-level magnetic fields are becoming feasible due to a significant progress that has been made in generating magnetic fields with laser-driven coils using ns-long laser pulses. The possibility of improving characteristics of laser-driven proton beams using such fields is a strong motivation for further development of laser-driven magnetic field capabilities.}
+}
+
+
+@article{Yao_2024_MaRaE,
+	author = {Yao, Weipeng and Nakatsutsumi, Motoaki and Buffechoux, Sébastien and Antici, Patrizio and Borghesi, Marco and Ciardi, Andrea and Chen, Sophia N. and d’Humières, Emmanuel and Gremillet, Laurent and Heathcote, Robert and Horný, Vojtěch and McKenna, Paul and Quinn, Mark N. and Romagnani, Lorenzo and Royle, Ryan and Sarri, Gianluca and Sentoku, Yasuhiko and Schlenvoigt, Hans-Peter and Toncian, Toma and Tresca, Olivier and Vassura, Laura and Willi, Oswald and Fuchs, Julien},
+	title = {Optimizing laser coupling, matter heating, and particle acceleration from solids using multiplexed ultraintense lasers},
+	journal = {Matter and Radiation at Extremes},
+	volume = {9},
+	number = {4},
+	pages = {047202},
+	year = {2024},
+	month = {04},
+	abstract = {Realizing the full potential of ultrahigh-intensity lasers for particle and radiation generation will require multi-beam arrangements due to technology limitations. Here, we investigate how to optimize their coupling with solid targets. Experimentally, we show that overlapping two intense lasers in a mirror-like configuration onto a solid with a large preplasma can greatly improve the generation of hot electrons at the target front and ion acceleration at the target backside. The underlying mechanisms are analyzed through multidimensional particle-in-cell simulations, revealing that the self-induced magnetic fields driven by the two laser beams at the target front are susceptible to reconnection, which is one possible mechanism to boost electron energization. In addition, the resistive magnetic field generated during the transport of the hot electrons in the target bulk tends to improve their collimation. Our simulations also indicate that such effects can be further enhanced by overlapping more than two laser beams.},
+	issn = {2468-2047},
+	doi = {10.1063/5.0184919},
+	url = {https://doi.org/10.1063/5.0184919},
+	eprint = {https://pubs.aip.org/aip/mre/article-pdf/doi/10.1063/5.0184919/19885035/047202\_1\_5.0184919.pdf},
+}
+
+
+
+
+
+
+
+
