--- a/template.tex
+++ b/template.tex
@@ -133,13 +133,13 @@
 \PrintListofAbbreviations{List of Abbreviations} %Title is in { } - change if desired
 
 \mainmatter
-%\include{chap1}
+\include{chap1}
 \include{chap2}
-%\include{chap3}
+\include{chap3}
 \include{chap4}
-%\include{chap5}
-%\include{chap6}
-%\include{chap7}
+\include{chap5}
+\include{chap6}
+\include{chap7}
 
 \backmatter
 % We use BIBTeX for the bibliography---you don't have to
